# normo_backend

./: .env.example  README.md  pyproject.toml
.cursor/rules/: python-project-rules.mdc
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
src/normo_backend/: __init__.py  config.py  main.py
src/normo_backend/agents/: __init__.py  builder.py  meta_data.py  meta_data_agent.py  pdf_selector.py  planner.py  planner_agent.py  retriever.py  summarizer.py
src/normo_backend/api/: app.py
src/normo_backend/models/: __init__.py  memory_state.py  schemas.py
src/normo_backend/prompts/: __init__.py  meta_data_extractor.py  pdf_selector.py  planner.py  retriever.py  summarizer.py  validator.py
src/normo_backend/utils/: __init__.py  llm_inference.py  logging.py  trimer.py
