[project]
name = "normo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "mohammad.alnajdawi", email = "mohammad.alnajdawi@teamviewer.com" }
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.116.1",
    "ipykernel>=6.30.1",
    "ipython>=9.4.0",
    "langchain[openai]>=0.3.27",
    "langchain-community>=0.3.27",
    "langchain-openai>=0.3.29",
    "langgraph>=0.6.4",
    "openai>=1.99.6",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "uvicorn>=0.35.0",
    "pydantic-settings>=2.6.1",
]

[project.scripts]
normo-backend = "normo_backend.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
